--- a/Project_Manager/templates/base.html
+++ b/Project_Manager/templates/base.html
@@ -15,7 +15,7 @@
 <body>
     
     <header class="bg-white">
-        <nav class="mx-auto flex items-center justify-between p-6 lg:px-8" aria-label="Global">
+        <nav class="mx-auto flex items-center justify-between p-[18px] lg:px-8" aria-label="Global">
           <div class="flex lg:flex-1">
             <a href="#" class="-m-1.5 p-1.5">
               <img class="h-8 w-auto" src="" alt="">
@@ -29,14 +29,14 @@
               </svg>
             </button>
           </div>
-          <div class="hidden lg:flex lg:gap-x-12">
-            <a href="#" class="text-xl font-semibold text-gray-900">Начать</a>
-            <a href="#" class="text-xl font-semibold text-gray-900">О возможностях</a>
-            <a href="#" class="text-xl font-semibold text-gray-900">Обратная связь</a>
+          <div class="hidden lg:flex lg:gap-x-6 bg-gray-200 rounded-xl">
+            <a href="#" class="btn btn-neutral btn-outline text-xl font-semibold text-white border-none animate-pulse bg-purple-500">Начать</a>
+            <a href="#" class="btn btn-neutral btn-outline text-xl font-semibold text-zinc-950 border-none">О возможностях</a>
+            <a href="#" class="btn btn-neutral btn-outline text-xl font-semibold text-zinc-950 border-none">Обратная связь</a>
           </div>
           <div class="hidden lg:flex lg:flex-1 lg:justify-end">
-            <a href="#" class="text-xl font-semibold text-gray-900 mr-6">Войти</a>
-            <a href="#" class="text-xl font-semibold text-gray-900">Зарегистрироваться</a>
+            <a href="#" class="btn btn-primary text-xl font-semibold text-white mr-6">Войти</a>
+            <a href="#" class="btn btn-primary text-xl font-semibold text-white">Зарегистрироваться</a>
           </div>
         </nav>
         <!-- Mobile menu, show/hide based on menu open state. -->
