--- a/Project_Manager/templates/base.html
+++ b/Project_Manager/templates/base.html
@@ -84,7 +84,7 @@
                     </div>
                 </div>
                 <img
-                    src="https://img.daisyui.com/images/stock/photo-1635805737707-575885ab0820.webp"
+                    src=""
                     class="max-w-sm rounded-lg shadow-2xl"
                 />
             </div>
