--- a/Project_Manager/templates/base.html
+++ b/Project_Manager/templates/base.html
@@ -35,8 +35,13 @@
 			<a href="#" class="btn btn-neutral btn-outline text-xl font-semibold text-zinc-950 border-none">Обратная связь</a>
 		  </div>
 		  <div class="hidden lg:flex lg:flex-1 lg:justify-end">
-			<a href="#" class="btn btn-primary text-xl font-semibold text-white mr-6">Войти</a>
-			<a href="#" class="btn btn-primary text-xl font-semibold text-white">Зарегистрироваться</a>
+            {% if user.is_authenticated %}
+				<a href="#" class="btn btn-primary text-xl font-semibold text-white mr-6">Профиль</a>
+				<a href="{% url 'users:logout' %}" class="btn btn-primary text-xl font-semibold text-white">Выйти</a>
+			{% else %}
+				<a href="{% url 'users:login' %}" class="btn btn-primary text-xl font-semibold text-white mr-6">Войти</a>
+				<a href="{% url 'users:register' %}" class="btn btn-primary text-xl font-semibold text-white">Зарегистрироваться</a>
+			{% endif %}
 		  </div>
 		</nav>
 		<!-- Mobile menu, show/hide based on menu open state. -->
