--- a/Project_Manager/templates/users/login.html
+++ b/Project_Manager/templates/users/login.html
@@ -9,7 +9,9 @@
 <div class="w-full max-w-md">
     <div class="bg-white rounded-xl shadow-2xl overflow-hidden">
         <!-- Header -->
-        <div class="bg-indigo-600 py-6 px-8 text-center">
+        <div class="bg-indigo-600 py-6 px-8 text-center relative">
+            <a onclick="window.history.back();"><i class="fas fa-reply absolute scale-[2.3] top-1/2 left-6 transform -translate-y-1/2 text-white cursor-pointer">
+            </i></a>
             <h1 class="text-2xl font-bold text-white">Авторизация</h1>
             <p class="text-indigo-100 mt-1">Войдите в свой аккаунт</p>
         </div>
