added static/script js

--- a/Project_Manager/templates/home-page.html
+++ b/Project_Manager/templates/home-page.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -95,21 +97,6 @@
             </div>
 	  </div>
 
-	  <script>
-		document.addEventListener('DOMContentLoaded', function() {
-		  const menuOpen = document.getElementById('menu-open');
-		  const menuClose = document.getElementById('menu-close');
-		  const mobileMenu = document.getElementById('mobile-menu');
-		  
-		  menuOpen.addEventListener('click', function() {
-			mobileMenu.classList.remove('hidden');
-		  });
-		  
-		  menuClose.addEventListener('click', function() {
-			mobileMenu.classList.add('hidden');
-		  });
-		});
-	  </script>
-
+	<script src="{% static 'script/index.js' %}"></script>
 </body>
 </html>
