--- a/Project_Manager/templates/home-page.html
+++ b/Project_Manager/templates/home-page.html
@@ -32,7 +32,7 @@
 			</button>
 		  </div>
 		  <div class="hidden lg:flex lg:gap-x-6 bg-gray-200 rounded-xl">
-			<a href="#" class="btn btn-neutral btn-outline text-xl font-semibold text-white border-none animate-pulse bg-purple-500">Начать</a>
+			<a href="{% url 'teams:workplace' %}" class="btn btn-neutral btn-outline text-xl font-semibold text-white border-none animate-pulse bg-purple-500">Начать</a>
 			<a href="#" class="btn btn-neutral btn-outline text-xl font-semibold text-zinc-950 border-none">О возможностях</a>
 			<a href="#" class="btn btn-neutral btn-outline text-xl font-semibold text-zinc-950 border-none">Обратная связь</a>
 		  </div>
