--- a/Project_Manager/templates/base.html
+++ b/Project_Manager/templates/base.html
@@ -79,7 +79,7 @@
 		</div>
 	  </header>
 
-      <div class="flex h-screen bg-gray-100">
+      <div class="flex h-[91vh] bg-gray-100">
 
         <!-- Sidebar -->
         {% include 'includes/sidebar.html' %}
