--- a/Project_Manager/templates/includes/sidebar.html
+++ b/Project_Manager/templates/includes/sidebar.html
@@ -11,7 +11,7 @@
         <a href="#" class="block px-4 py-2 rounded hover:bg-gray-200 text-gray-800">Пункт 5</a>
       </nav>
       <div class="px-4 py-4 border-t">
-        <button class="w-full text-left px-4 py-2 text-sm text-red-600 hover:bg-red-100 rounded">🚪 Выйти</button>
+        <button class="w-full text-left px-4 py-2 text-sm text-red-600 hover:bg-red-100 rounded">Выйти</button>
       </div>
     </aside>
   
