--- a/Project_Manager/templates/teams/workplace.html
+++ b/Project_Manager/templates/teams/workplace.html
@@ -3,5 +3,33 @@
 {% block content %}
     
 
+    <div class="flex justify-evenly w-[100vh] mx-auto my-auto border-solid border-2 border-red-600">
+
+    <div class="card w-80 bg-gradient-to-r from-violet-500 to-fuchsia-500 shadow-xl">
+      <div class="card-body p-[1.25rem]">
+        <h1 class="card-title text-2xl text-white">Создать команду</h1>
+        <p class="text-white">Создайте команду, добавьте проекты, решайте задачи.</p>
+        <div class="card-actions justify-end">
+            <button class="btn items-center justify-start overflow-hidden font-medium bg-indigo-100 rounded-lg hover:bg-transparent group hover:border-white hover:border-2 py-1.5 px-2.5 animate-pulse hover:animate-none ">
+                <span class="text-left text-indigo-900 transition-colors group-hover:text-white">Создать команду</span>
+            </button>
+        </div>
+      </div>
+    </div>
+  
+    <div class="card w-80 bg-gradient-to-r from-sky-500 to-indigo-500 shadow-xl">
+      <div class="card-body p-[1.25rem]">
+        <h2 class="card-title text-2xl text-white">Возможности</h2>
+        <p class="text-white">Узнайте, что вы можете делать в нашей системе.</p>
+        <div class="card-actions justify-end">
+            <button class="btn items-center justify-start overflow-hidden font-medium bg-indigo-100 rounded-lg hover:bg-transparent hover:border-white hover:border-2 group py-1.5 px-2.5 animate-pulse hover:animate-none">
+                <span class="text-left text-indigo-600 transition-colors group-hover:text-white">О возможностях</span>
+            </button>
+        </div>
+      </div>
+    </div>
+  
+</div>
+  
 
 {% endblock content %}
