--- a/Project_Manager/templates/base.html
+++ b/Project_Manager/templates/base.html
@@ -32,8 +32,8 @@
 			</button>
 		  </div>
 		  <div class="hidden lg:flex lg:gap-x-6 bg-gray-200 rounded-xl">
-			<a href="#" class="btn btn-neutral btn-outline text-xl font-semibold text-white border-none animate-pulse bg-purple-500">Начать</a>
 			<a href="#" class="btn btn-neutral btn-outline text-xl font-semibold text-zinc-950 border-none">О возможностях</a>
+			<a href="#" class="btn btn-neutral btn-outline text-xl font-semibold text-zinc-950 border-none">На главную</a>
 			<a href="#" class="btn btn-neutral btn-outline text-xl font-semibold text-zinc-950 border-none">Обратная связь</a>
 		  </div>
 		  <div class="hidden lg:flex lg:flex-1 lg:justify-end">
