--- a/Project_Manager/templates/teams/workplace.html
+++ b/Project_Manager/templates/teams/workplace.html
@@ -22,7 +22,7 @@
         <h2 class="card-title text-2xl text-white">Возможности</h2>
         <p class="text-white">Узнайте, что вы можете делать в нашей системе.</p>
         <div class="card-actions justify-end">
-            <button class="btn items-center justify-start overflow-hidden font-medium bg-indigo-100 rounded-lg hover:bg-transparent hover:border-white hover:border-2 group py-1.5 px-2.5 animate-pulse hover:animate-none">
+            <button class="btn items-center justify-start overflow-hidden font-medium bg-indigo-100 rounded-lg hover:bg-transparent hover:border-white hover:border-2 group py-1.5 px-2.5">
                 <span class="text-left text-indigo-600 transition-colors group-hover:text-white">О возможностях</span>
             </button>
         </div>
