--- a/Project_Manager/templates/includes/sidebar.html
+++ b/Project_Manager/templates/includes/sidebar.html
@@ -4,8 +4,8 @@
     <aside class="w-64 bg-white shadow-md flex flex-col">
       <div class="px-6 py-4 text-2xl font-semibold border-b">Описание</div>
       <nav class="flex-1 px-4 py-2 space-y-2">
-        <a href="#" class="block px-4 py-2 rounded hover:bg-gray-200 text-gray-800">На главную</a>
-        <a href="#" class="block px-4 py-2 rounded hover:bg-gray-200 text-gray-800">Команды</a>
+        <a href="{% url 'projects:home' %}" class="block px-4 py-2 rounded hover:bg-gray-200 text-gray-800">На главную</a>
+        <a href="{% url 'teams:team_list' %}" class="block px-4 py-2 rounded hover:bg-gray-200 text-gray-800">Команды</a>
         <a href="#" class="block px-4 py-2 rounded hover:bg-gray-200 text-gray-800">Уведомления</a>
       </nav>
       <div class="px-4 py-4 border-t">
