--- a/Project_Manager/templates/includes/sidebar.html
+++ b/Project_Manager/templates/includes/sidebar.html
@@ -7,7 +7,7 @@
     <a href="{% url 'projects:home' %}" class="block px-4 py-2 rounded hover:bg-gray-200 text-gray-800">На главную</a>
     <div class="dropdown dropdown-right w-full">
       <div tabindex="0" role="button" class="block px-4 py-2 rounded hover:bg-gray-200 text-gray-800 w-full text-left">Проекты</div>
-      <div tabindex="0" class="dropdown-content bg-white w-[300px] rounded-box z-10 w-64 p-3 shadow-md ml-2 flex flex-col gap-2">
+      <div tabindex="0" class="dropdown-content bg-white w-[34vh] rounded-box z-10 w-64 p-3 shadow-md ml-2 flex flex-col gap-2">
         <!-- Строка поиска -->
         <div class="relative">
           <input 
