button to hide message

--- a/Project_Manager/templates/base.html
+++ b/Project_Manager/templates/base.html
@@ -90,7 +90,7 @@
 			<div class="bg-green-200 border border-green-600 text-green-800 rounded-lg shadow-xl p-6 max-w-md w-full pointer-events-auto relative">
 				<span 
 					class="absolute top-2 right-3 text-green-600 hover:text-green-800 cursor-pointer text-xl font-bold"
-					onclick="hideMessage(this.parentElement)"
+					onclick="hideMessage(this)"
 				>
 					&times;
 				</span>
