--- a/Project_Manager/templates/base.html
+++ b/Project_Manager/templates/base.html
@@ -85,24 +85,7 @@
       <div class="flex min-h-[91vh] bg-gray-100">
 
 		{% if messages %}
-		<div class="fixed inset-0 flex items-start justify-center pt-16 pointer-events-none z-50">
-			{% for message in messages %}
-			<div class="bg-green-200 border border-green-600 text-green-800 rounded-lg shadow-xl p-6 max-w-md w-full pointer-events-auto relative">
-				<span 
-					class="absolute top-2 right-3 text-green-600 hover:text-green-800 cursor-pointer text-xl font-bold"
-					onclick="hideMessage(this)"
-				>
-					&times;
-				</span>
-				<div class="text-center py-2 px-4 flex items-center justify-center">
-					<svg class="w-5 h-5 mr-2 text-green-500 dark:text-green-500" fill="currentColor" viewBox="0 0 20 20">
-						<path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd"></path>
-					</svg>
-					{{ message }}
-				</div>
-			</div>
-			{% endfor %}
-		</div>
+		{% include 'includes/messages.html' %}
 		{% endif %}
 
         <!-- Sidebar -->
