--- a/Project_Manager/templates/includes/sidebar.html
+++ b/Project_Manager/templates/includes/sidebar.html
@@ -38,8 +38,12 @@
         <div class="relative">
           <input 
             type="text" 
+            name="search"
             placeholder="Поиск..." 
             class="w-full pl-8 pr-4 py-2 text-slate-800 border bg-gray-200 rounded-lg focus:outline-none focus:ring-1 focus:ring-blue-500"
+            hx-get="{% url 'teams:search_team' %}"
+            hx-target="#ssa"
+            hx-trigger="keyup"
           >
           <svg class="absolute left-2.5 top-2.5 h-4 w-4 text-gray-400" fill="none" viewBox="0 0 24 24" stroke="currentColor">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
@@ -48,13 +52,9 @@
         </div>
       
         <!-- Список элементов с фиксированной высотой и прокруткой -->
-        <div class="overflow-y-auto" style="max-height: 200px;">
-          {% for team in context_teams %}
-          <a href="#" class="block px-3 py-2 rounded hover:bg-gray-200 text-gray-800">
-            {{ team.name }}
-          </a>
-          {% endfor %}
-      </div>
+        <div class="overflow-y-auto" id="ssa" style="max-height: 200px;">
+          {% include 'includes/team_list.html' %}
+        </div>
         
         <!-- Кнопка внизу -->
         <button class="relative mt-auto px-4 py-2 bg-blue-500 text-white rounded-lg hover:bg-blue-600 transition-colors" onclick="add_team_modal.showModal()">
