--- a/Project_Manager/templates/teams/team_list.html
+++ b/Project_Manager/templates/teams/team_list.html
@@ -1,10 +1,11 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block content %}
 
 <div class="flex flex-wrap justify-between h-[100%] w-[auto] p-4 border-solid border-2 border-red-600">
     {% for team in teams %}
-    <div class="shadow-xl relative self-start card w-80 border border-solid border-gray-200 rounded-2xl mx-4 p-4 transition-all duration-500 col-span-12  xl:p-7   lg:col-span-3 md:col-span-6 ">
+    <div class="shadow-xl relative self-start card w-80 border border-solid border-gray-200 rounded-2xl mx-4 p-4 transition-all duration-500 col-span-12  xl:p-6  lg:col-span-3 md:col-span-6 ">
         <div class=" mb-6 w-[46px]">
         <a href="">
             <svg width="46" height="46" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -15,7 +16,18 @@
         <div class="h-[100px]">
             <h4 class="text-base font-semibold text-gray-900 mb-2 capitalize transition-all duration-500 ">{{ team.name }}</h4>
         </div>
-        <button class="bg-indigo-600 shadow-sm rounded-full py-2 px-5 text-xs text-white font-semibold">Перейти</button>
+        <button class="px-5 py-2 text-xs font-semibold text-white bg-indigo-600 rounded-full shadow-sm">Перейти</button>
+        
+        <!-- Footer -->
+        <div class="mt-[15px] flex cursor-pointer group relative max-w-max">
+            <img class="w-[1.25rem] h-[1.30rem] mr-1.5 self-center grayscale-[100%] brightness-75" src="{% static 'img/calendar.png' %}">
+            <p class="text-zinc-500">{{ team.created_at|date:"d.m.Y" }}</p>
+            <!-- Кастомный тултип -->
+            <span class="absolute -top-8 left-1/2 -translate-x-1/2 bg-gray-800 text-white text-xs text-center py-1 px-2 rounded opacity-0 group-hover:opacity-100 transition-opacity duration-200 whitespace-nowrap">
+                Создано: {{ team.created_at|date:"d.m.Y" }} <br>
+                {{ team.author }}
+            </span>
+        </div>
     </div>
     {% endfor %}
 
