--- a/Project_Manager/templates/teams/team_list.html
+++ b/Project_Manager/templates/teams/team_list.html
@@ -6,12 +6,29 @@
 <div class="flex flex-wrap justify-between h-[100%] w-[auto] p-4 border-solid border-2 border-red-600">
     {% for team in teams %}
     <div class="shadow-xl relative self-start card w-80 border border-solid border-gray-200 rounded-2xl mx-4 p-4 transition-all duration-500 col-span-12  xl:p-6  lg:col-span-3 md:col-span-6 ">
-        <div class=" mb-6 w-[46px]">
-        <a href="">
-            <svg width="46" height="46" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path d="M8.66699 12.8162L11.3501 15.4993C11.5616 15.7107 11.9043 15.7109 12.1158 15.4997L17.8753 9.75033M13.0003 23.8337C7.01724 23.8337 2.16699 18.9834 2.16699 13.0003C2.16699 7.01724 7.01724 2.16699 13.0003 2.16699C18.9834 2.16699 23.8337 7.01724 23.8337 13.0003C23.8337 18.9834 18.9834 23.8337 13.0003 23.8337Z" stroke="#4F46E5" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
-            </svg>
-        </a>
+        <div class="relative mb-6">
+            <a href="">
+                <svg width="46" height="46" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M8.66699 12.8162L11.3501 15.4993C11.5616 15.7107 11.9043 15.7109 12.1158 15.4997L17.8753 9.75033M13.0003 23.8337C7.01724 23.8337 2.16699 18.9834 2.16699 13.0003C2.16699 7.01724 7.01724 2.16699 13.0003 2.16699C18.9834 2.16699 23.8337 7.01724 23.8337 13.0003C23.8337 18.9834 18.9834 23.8337 13.0003 23.8337Z" stroke="#4F46E5" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+                </svg>
+            </a>
+            <div class="dropdown dropdown-end absolute top-0 right-0 w-[30px] h-auto rounded-md hover:bg-gray-300">
+                <!-- Кнопка с иконкой (без фона) -->
+                <div tabindex="0" role="button" class="pointer bg-transparent border-none hover:bg-transparent">
+                    <img 
+                        class="w-[30px] h-auto" 
+                        src="{% static 'img/ellipsis.png' %}" 
+                        alt="Menu"
+                    >
+                </div>
+                
+                <!-- Выпадающее меню (прозрачный фон) -->
+                <ul tabindex="0" class="dropdown-content menu bg-gray-100 border border-gray-400 shadow-md rounded-lg z-10 w-52 p-2">
+                    <li><a class="rounded text-gray-600 hover:bg-gray-200">Редактировать</a></li>
+                    <li><a class="rounded text-red-500 hover:bg-red-500 hover:text-white">Удалить</a></li>
+                </ul>
+            </div>
+
         </div>
         <div class="h-[100px]">
             <h4 class="text-base font-semibold text-gray-900 mb-2 capitalize transition-all duration-500 ">{{ team.name }}</h4>
