--- a/Project_Manager/templates/teams/team_list.html
+++ b/Project_Manager/templates/teams/team_list.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% load static %}
+{% load static custom_filters %}
 
 {% block content %}
 
@@ -22,10 +22,13 @@
                     >
                 </div>
                 
-                <!-- Выпадающее меню (прозрачный фон) -->
+                <!-- Выпадающее меню -->
                 <ul tabindex="0" class="dropdown-content menu bg-gray-100 border border-gray-400 shadow-md rounded-lg z-10 w-52 p-2">
-                    <li><a class="rounded text-gray-600 hover:bg-gray-200">Редактировать</a></li>
+                    <li><a class="rounded text-gray-600 hover:bg-gray-200"  onclick="document.getElementById('update_team_modal_{{ team.id }}').showModal()">Редактировать</a></li>
                     <li><a class="rounded text-red-500 hover:bg-red-500 hover:text-white">Удалить</a></li>
+                    {% with form=team_forms|dictkey:team.id %}
+                        {% include 'includes/update-team-modal.html' %}
+                    {% endwith %}
                 </ul>
             </div>
 
@@ -40,7 +43,7 @@
             <img class="w-[1.25rem] h-[1.30rem] mr-1.5 self-center grayscale-[100%] brightness-75" src="{% static 'img/calendar.png' %}">
             <p class="text-zinc-500">{{ team.created_at|date:"d.m.Y" }}</p>
             <!-- Кастомный тултип -->
-            <span class="absolute -top-8 left-1/2 -translate-x-1/2 bg-gray-800 text-white text-xs text-center py-1 px-2 rounded opacity-0 group-hover:opacity-100 transition-opacity duration-200 whitespace-nowrap">
+            <span class="absolute -top-10 left-1/2 -translate-x-1/2 bg-gray-800 text-white text-xs text-center py-1 px-2 rounded opacity-0 group-hover:opacity-100 transition-opacity duration-200 whitespace-nowrap">
                 Создано: {{ team.created_at|date:"d.m.Y" }} <br>
                 {{ team.author }}
             </span>
