--- a/Project_Manager/templates/includes/sidebar.html
+++ b/Project_Manager/templates/includes/sidebar.html
@@ -42,8 +42,8 @@
             placeholder="Поиск..." 
             class="w-full pl-8 pr-4 py-2 text-slate-800 border bg-gray-200 rounded-lg focus:outline-none focus:ring-1 focus:ring-blue-500"
             hx-get="{% url 'teams:search_team' %}"
-            hx-target="#ssa"
-            hx-trigger="keyup"
+            hx-target="#team_list"
+            hx-trigger="keyup delay:200ms"
           >
           <svg class="absolute left-2.5 top-2.5 h-4 w-4 text-gray-400" fill="none" viewBox="0 0 24 24" stroke="currentColor">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
@@ -52,7 +52,7 @@
         </div>
       
         <!-- Список элементов с фиксированной высотой и прокруткой -->
-        <div class="overflow-y-auto" id="ssa" style="max-height: 200px;">
+        <div class="overflow-y-auto" id="team_list" style="max-height: 200px;">
           {% include 'includes/team_list.html' %}
         </div>
         
