--- a/Project_Manager/templates/teams/team_list.html
+++ b/Project_Manager/templates/teams/team_list.html
@@ -5,7 +5,7 @@
 
 <div class="flex flex-wrap justify-between h-[100%] w-[auto] p-4 border-solid border-2 border-red-600">
     {% for team in teams %}
-    <div class="shadow-xl relative self-start card w-80 border border-solid border-gray-200 rounded-2xl mx-4 p-4 transition-all duration-500 col-span-12  xl:p-6  lg:col-span-3 md:col-span-6 ">
+    <div class="shadow-lg relative self-start card w-80 border border-solid border-gray-200 rounded-2xl mx-4 p-4 mb-6 transition-all duration-500 col-span-12  xl:p-6  lg:col-span-3 md:col-span-6 ">
         <div class="relative mb-6">
             <a href="">
                 <svg width="46" height="46" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
