command search bar

--- a/Project_Manager/templates/base.html
+++ b/Project_Manager/templates/base.html
@@ -91,10 +91,12 @@
         <!-- Sidebar -->
         {% include 'includes/sidebar.html' %}
 
-        <!-- Main content -->
-        {% block content %}
+		<main class="h-[100%]">
+			<!-- Main content -->
+			{% block content %}
 
-        {% endblock content %}
+			{% endblock content %}
+		</main>
 
       </div>
 
