--- a/Project_Manager/templates/teams/team_list.html
+++ b/Project_Manager/templates/teams/team_list.html
@@ -3,7 +3,46 @@
 
 {% block content %}
 
-<div class="flex flex-wrap justify-between h-[100%] w-[auto] p-4 border-solid border-2 border-red-600">
+<div class="flex items-center p-4 mb-1">
+    <!-- Левая часть: кнопка -->
+    <div class="flex-none">
+        <button class="btn btn-primary mx-4 text-white whitespace-nowrap">
+            Добавить команду
+        </button>
+    </div>
+
+    <!-- Центральная часть: строка поиска по центру -->
+    <div class="flex-1 flex justify-center">
+        <div class="relative max-w-2xl w-full">
+            <input 
+                type="text" 
+                placeholder="Поиск..." 
+                class="input input-bordered bg-gray-50 text-gray-700 border-gray-400 w-full pl-10 pr-6 focus:border-sky-600"
+            />
+            <svg 
+                class="absolute left-3 top-3 h-5 w-5 text-gray-400 pointer-events-none" 
+                fill="none" 
+                viewBox="0 0 24 24" 
+                stroke="currentColor"
+            >
+                <path 
+                    stroke-linecap="round" 
+                    stroke-linejoin="round" 
+                    stroke-width="2" 
+                    d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" 
+                />
+            </svg>
+        </div>
+    </div>
+
+    <!-- Пустая часть (для равновесия) -->
+    <div class="flex-none w-16"></div>
+</div>
+
+
+
+<div class="flex flex-wrap justify-between w-[auto] p-4">
+    
     {% for team in teams %}
     <div class="shadow-lg relative self-start card w-80 border border-solid border-gray-200 rounded-2xl mx-4 p-4 mb-6 transition-all duration-500 col-span-12  xl:p-6  lg:col-span-3 md:col-span-6 ">
         <div class="relative mb-6">
