--- a/Project_Manager/templates/teams/team_list.html
+++ b/Project_Manager/templates/teams/team_list.html
@@ -6,7 +6,7 @@
 <div class="flex items-center p-4 mb-1">
     <!-- Левая часть: кнопка -->
     <div class="flex-none">
-        <button class="btn btn-primary mx-4 text-white whitespace-nowrap">
+        <button class="btn btn-primary mx-4 text-white whitespace-nowrap" onclick="add_team_modal.showModal();">
             Добавить команду
         </button>
     </div>
