fixes related to the curved display of commands

--- a/Project_Manager/templates/base.html
+++ b/Project_Manager/templates/base.html
@@ -91,7 +91,7 @@
 			<!-- Sidebar -->
 			{% include 'includes/sidebar.html' %}
 
-			<main class="h-[91vh] w-full">
+			<main class="flex-1 w-full">
 				<!-- Main content -->
 				{% block content %}
 
