--- a/Project_Manager/templates/teams/team_list.html
+++ b/Project_Manager/templates/teams/team_list.html
@@ -45,7 +45,7 @@
 
 
 
-<div id="teams_list" class="flex flex-wrap justify-between w-[auto] p-4">
+<div id="teams_list" class="flex flex-wrap justify-start w-full p-4 gap-4">
     
     {% include 'teams/partial-team_list.html' %}
 
