--- a/Project_Manager/templates/base.html
+++ b/Project_Manager/templates/base.html
@@ -36,7 +36,7 @@
 			</div>
 			<div class="hidden lg:flex lg:gap-x-6 bg-gray-200 rounded-xl">
 				<a href="#" class="btn btn-neutral btn-outline text-xl font-semibold text-zinc-950 border-none">О возможностях</a>
-				<a href="{% url 'projects:home' %}" class="btn btn-neutral btn-outline text-xl font-semibold text-zinc-950 border-none">На главную</a>
+				<a href="" class="btn btn-neutral btn-outline text-xl font-semibold text-zinc-950 border-none">На главную</a>
 				<a href="#" class="btn btn-neutral btn-outline text-xl font-semibold text-zinc-950 border-none">Обратная связь</a>
 			</div>
 			<div class="hidden lg:flex lg:flex-1 lg:justify-end">
