--- a/Project_Manager/templates/includes/sidebar.html
+++ b/Project_Manager/templates/includes/sidebar.html
@@ -4,7 +4,7 @@
 <aside class="min-w-64 bg-white shadow-md flex flex-col">
   <div class="px-6 py-4 text-2xl font-semibold border-b">Описание</div>
   <nav class="flex-1 px-4 py-2 space-y-2">
-    <a href="{% url 'projects:home' %}" class="block px-4 py-2 rounded hover:bg-gray-200 text-gray-800">На главную</a>
+    <a href="" class="block px-4 py-2 rounded hover:bg-gray-200 text-gray-800">На главную</a>
     <div class="dropdown dropdown-right w-full">
       <div tabindex="0" role="button" class="block px-4 py-2 rounded hover:bg-gray-200 text-gray-800 w-full text-left">Команды</div>
       <!-- Заголовок -->
