--- a/Project_Manager/templates/teams/team-conf.html
+++ b/Project_Manager/templates/teams/team-conf.html
@@ -5,7 +5,7 @@
 <!-- Шапка -->
 {% include 'includes/header-team-conf.html'  %}
 
-<div class="p-6">
+<div>
     {% block configuration_content %}
     {% endblock configuration_content %}
 </div>
