project addition form

--- a/Project_Manager/templates/projects/project_list.html
+++ b/Project_Manager/templates/projects/project_list.html
@@ -41,9 +41,10 @@
     </div>
 
     <div class="flex-none">
-      <button class="btn btn-primary text-lg mx-4 text-white whitespace-nowrap">
+      <button class="btn btn-primary text-lg mx-4 text-white whitespace-nowrap" onclick="add_project_modal.showModal();">
           Добавить проект
       </button>
+      {% include 'projects/includes/add-project-modal.html' %}
     </div>
 
   </div>
