change status part-2

--- a/Project_Manager/templates/projects/s.html
+++ b/Project_Manager/templates/projects/s.html
@@ -22,23 +22,28 @@
               <p class="text-gray-500 text-sm line-clamp-1">{{ project.description }}</p>
             </div>
             
+            <form action="{% url 'teams:projects:project_status_changes' project.id %}" method="post" id="statusForm">
+              {% csrf_token %}
+              <input type="hidden" name="status" id="statusInput">
+            </form>
+
             <div class="dropdown">
               <div tabindex="0" role="button" class="px-3 py-1 rounded-lg {{project.status_text}} text-sm font-medium {{project.status_color}} border border-gray-400">{{ project.status }} <i class='fas fa-angle-down mt-1'></i></div>
               <ul tabindex="0" class="dropdown-content menu text-gray-600 bg-white border border-gray-300 rounded-box z-[1] w-48 p-2 shadow-sm">
                 <li>
-                  <a href="{% url 'teams:projects:project_status_changes' project.id %}" name="{{ status_choices.IN_WORK }}" value="{{ status_choices.IN_WORK }}" class="flex items-center gap-2">
+                  <a onclick="changeStatus('{{status_choices.IN_WORK}}')" class="flex items-center gap-2">
                     <span class="w-2.5 h-2.5 rounded-full bg-green-500"></span>
                     {{ status_choices.IN_WORK }}
                   </a>
                 </li>
                 <li>
-                  <a href="{% url 'teams:projects:project_status_changes' project.id %}" name="{{ status_choices.STOPPED }}" value="{{ status_choices.STOPPED }}" class="flex items-center gap-2">
+                  <a onclick="changeStatus('{{status_choices.STOPPED}}')" class="flex items-center gap-2">
                     <span class="w-2.5 h-2.5 rounded-full bg-yellow-400"></span>
                     {{ status_choices.STOPPED }}
                   </a>
                 </li>
                 <li>
-                  <a class="flex items-center gap-2">
+                  <a onclick="changeStatus('{{status_choices.COMPLETED}}')" class="flex items-center gap-2">
                     <span class="w-2.5 h-2.5 rounded-full bg-red-400"></span>
                     {{ status_choices.COMPLETED }}
                   </a>
@@ -46,6 +51,14 @@
               </ul>
             </div>
           </div>
+          <script>
+            function changeStatus(status){
+              const form = document.getElementById('statusForm')
+              const input = document.getElementById('statusInput')
+              input.value = status
+              form.submit();
+            };
+          </script>
           
           <div class="flex flex-wrap items-center gap-x-4 gap-y-2 mt-2 text-sm text-gray-500">
             <div class="flex items-center">
